crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__introspection__schema-partial-solution.snap
---
source: crates/engine/query-solver/src/tests/introspection.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Introspection\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.__schema\" ]\n    3 [ label = \"__Schema.queryType\" ]\n    4 [ label = \"__Type.name\" ]\n    0 -> 1 [ color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [  ]\n    2 -> 3 [  ]\n    3 -> 4 [  ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Introspection" ]
    2 [ label = "Query.__schema" ]
    3 [ label = "__Schema.queryType" ]
    4 [ label = "__Type.name" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    3 -> 4 [ label = "Field" ]
}
