crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__introspection__schema-solver.snap
---
source: crates/engine/query-solver/src/tests/introspection.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
}
